# attpc_engine

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
api/detector/: index.html
api/detector/beam_pads/: index.html
api/detector/constants/: index.html
api/detector/pairing/: index.html
api/detector/parameters/: index.html
api/detector/response/: index.html
api/detector/simulator/: index.html
api/detector/solver/: index.html
api/detector/transporter/: index.html
api/detector/typed_dict/: index.html
api/detector/writer/: index.html
api/kinematics/: index.html
api/kinematics/angle/: index.html
api/kinematics/excitation/: index.html
api/kinematics/pipeline/: index.html
api/kinematics/reaction/: index.html
docs/: faq.md  for_devs.md  index.md
docs/api/: index.md
docs/api/detector/: beam_pads.md  constants.md  index.md  pairing.md  parameters.md  response.md  simulator.md  solver.md  transporter.md  typed_dict.md  writer.md
docs/api/kinematics/: angle.md  excitation.md  index.md  pipeline.md  reaction.md
docs/user_guide/: getting_started.md  numba.md  setup.md  systems.md
docs/user_guide/detector/: index.md
docs/user_guide/kinematics/: index.md
faq/: index.html
for_devs/: index.html
src/attpc_engine/: __init__.py  constants.py  trial.py
src/attpc_engine/detector/: __init__.py  beam_pads.py  constants.py  diffusion.py  pairing.py  parameters.py  response.py  simulator.py  solver.py  transport.py  transporter.py  typed_dict.py  writer.py
src/attpc_engine/detector/data/: pad_grid.npz
src/attpc_engine/kinematics/: __init__.py  angle.py  convert_kinematics.py  excitation.py  pipeline.py  reaction.py
tests/: test_detector.py  test_kinematics.py  test_pairing.py
user_guide/detector/: index.html
user_guide/getting_started/: index.html
user_guide/kinematics/: index.html
user_guide/numba/: index.html
user_guide/setup/: index.html
user_guide/systems/: index.html
