[project]
name = "attpc_engine"
version = "0.1.4"
description = "AT-TPC Monte-Carlo simulation engine"
authors = [
    {name = "Gordon McCann", email = "gordonmccann215@gmail.com"},
    {name = "Zach Serikow", email = "zachserikow@gmail.com"},
]
dependencies = [
    "spyral-utils>=1.0.0",
    "h5py>=3.11.0",
    "numba>=0.59.1",
    "tqdm>=4.66.4",
]
requires-python = "<3.13,>=3.10"
readme = "README.md"
license = {text = "GPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
convert-kinematics = "attpc_engine.kinematics.convert_kinematics:main"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.1.1",
]
format = [
    "black==24.4.0",
]
docs = [
    "mkdocs-material>=9.5.17",
    "mkdocstrings>=0.25.1",
    "mkdocstrings-python>=1.10.3",
]
