[project]
name = "attpc_engine"
version = "0.2.0"
description = "AT-TPC Monte-Carlo simulation engine"
authors = [
    {name = "Gordon McCann", email = "gordonmccann215@gmail.com"},
    {name = "Zach Serikow", email = "zachserikow@gmail.com"},
]
dependencies = [
    "spyral-utils>=1.0.0",
    "h5py>=3.11.0",
    "numba>=0.59.1",
    "tqdm>=4.66.4",
    "scipy>=1.14.0",
]
requires-python = "<3.13,>=3.10"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed"
]


[project.urls]
Documentation = "https://attpc.github.io/attpc_engine"
Repository = "https://github.com/ATTPC/attpc_engine"
Issues = "https://github.com/ATTPC/attpc_engine/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
convert-kinematics = "attpc_engine.kinematics.convert_kinematics:main"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.1.1",
]
docs = [
    "mkdocs-material>=9.5.17",
    "mkdocstrings>=0.25.1",
    "mkdocstrings-python>=1.10.3",
]
lint = [
    "ruff>=0.5.7",
]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "N"]
ignore = ["E501"]
